# spatial_trace

./: .gitignore  README.md  baseline.py  clevr_dataloader.py  main.py  pyproject.toml
configs/prompts/: calm.txt  spatial_reasoning_system.txt  temp_verif.txt  verifier_system.txt
data/: __init__.py  clevr_dataloader.py  export_subset_easy.py  export_subset_human.py  export_subset_mixed.py
data/clevr_easy_subset/: subset.csv
spatial_trace/: __init__.py  analyze_tool_calls.py  cli.py
spatial_trace/data/: export_subset_hard.py  export_subset_human.py
spatial_trace/data/clevr_hard_subset/: subset.csv
spatial_trace/data/clevr_human_subset/: subset.csv
spatial_trace/data/clevr_mixed_subset/: subset.csv
spatial_trace/data_generation/pipelines/: trace.py
spatial_trace/evaluation/: accuracy_test.py  experiment_manager.py  quality_generator.py  trace_grader.py  utils.py
spatial_trace/inference/: __init__.py  pipeline.py  trace_processor.py  verifier.py
spatial_trace/llm_interface/: __init__.py  base_client.py  llm.py  openai_client.py  output_parser.py  prompt_manager.py
spatial_trace/tools/: __init__.py  base_tool.py  dav2_tool.py  depth.py  sam2_tool.py  tool_registry.py  trellis_tool.py
spatial_trace/utils/: __init__.py  file_io.py  image_utils.py  logger.py
